# community-calendar-manager

./: .gitignore  README.md  main.py  pyproject.toml
tests/: __init__.py  test_monthly_byday.py
